# mc-proxy

./: CMakeLists.txt  build.sh
src/: io.hh  main.cc  prelude.hh  serialization.hh  shutdown_handler.cc  shutdown_handler.hh
src/net/: ip_addr.hh  stream.hh
src/networking/: cursor.hh  deserializer.hh  ring_buffer.hh  simple_buffer.hh
src/packet/: buffer.hh  disconnect.hh  handshake.hh  login.hh  login_plugin_request.hh  packet_stream.hh  set_compression.hh  status_request.hh  status_response.hh
src/platform/linux/: io.cc  io.hh  linux.cc  linux.hh  net.cc  net.hh  signal.cc  signal.hh
src/serialization/: buffer_writer.hh  codec.hh  deserializer.hh  field_codec.hh  serializer.hh  write_queue.hh
src/util/: dyn_bytes.hh  member_ptr_traits.hh  rtype_access.hh
